--- a/app/assets/javascripts/discourse/templates/components/reviewable-bundled-action.hbs
+++ b/app/assets/javascripts/discourse/templates/components/reviewable-bundled-action.hbs
@@ -13,5 +13,6 @@
     icon=first.icon
     action=(action "perform" first)
     translatedLabel=first.label
+    translatedTitle=first.description
     disabled=reviewableUpdating}}
 {{/if}}
